<resources>
    <string name="app_name">ConcertBuddy</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email address...</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_registration_page">User Registration Page</string>
    <string name="prompt_confirm_email">Confirm your email address..</string>
    <string name="emails_must_match">Emails must match!</string>
    <string name="choose_a_username">Choose a username!</string>
    <string name="username_already_taken">Username already taken :(</string>
    <string name="register">register</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="event_time">Event Time:</string>
    <string name="event_name">Event Name</string>
    <string name="create_event">Create Event</string>
    <string name="event_description">Event Description</string>
    <string name="create_event_button">Create Event</string>
    <string name="event_location">Event Location</string>
    <string name="location_city_state">Location(City,State):</string>
    <string name="passwords_don_t_match">Passwords don\'t match!</string>
    <string name="user_name">Name: (not displayed to other users by default)</string>
    <string name="enter_a_password">Enter a password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="event_indicator_icon">Event Indicator Icon</string>
    <string name="create_event_button_text">create_event</string>


</resources>