<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".profile.UserRegisterFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/user_registration_page"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:autofillHints="Enter your email..."
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="48dp">

    </EditText>

    <EditText
        android:id="@+id/editTextConfirmEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:autofillHints="Confirm your email..."
        android:gravity="center"
        android:hint="@string/prompt_confirm_email"
        android:inputType="textEmailAddress"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="48dp">

    </EditText>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/emails_must_match"
        android:textColor="#F10000"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/enter_a_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordsMustMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/passwords_don_t_match"
        android:textColor="#F10000"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/editTextEnterUsername"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:autofillHints="Confirm your email..."
        android:gravity="center"
        android:hint="@string/choose_a_username"
        android:inputType="textShortMessage"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="48dp" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:autofillHints="Confirm your email..."
        android:gravity="center"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="12dp" />

    <EditText
        android:id="@+id/editTextUserLocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:autoLink="map"
        android:autofillHints="Confirm your email..."
        android:gravity="center"
        android:hint="@string/location_city_state"
        android:inputType="text|textPostalAddress|textAutoComplete"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="48dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="48dp"
        android:layout_weight=".5"
        android:maxWidth="300dp"
        android:text="@string/register">

    </Button>


</LinearLayout>