<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".UserRegisterFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:gravity="center"
        android:text="@string/create_event"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/event_name_edit_text"
        android:layout_gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:maxWidth="488dp"
        android:hint="@string/event_name"
        android:paddingHorizontal="48dp"
        android:gravity="center">
    </EditText>

    <EditText
        android:id="@+id/event_location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_gravity="top|center"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:maxWidth="488dp"
        android:hint="@string/event_location"
        android:paddingHorizontal="48dp"
        android:gravity="center">
    </EditText>

    <EditText
        android:id="@+id/event_description_edit_text"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:maxWidth="488dp"
        android:autofillHints="Confirm your email..."
        android:hint="@string/event_description"
        android:paddingHorizontal="48dp"
        android:gravity="center">

    </EditText>

    <DatePicker
        android:id="@+id/event_date_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top|center"
        android:layout_marginHorizontal="48dp"
        android:layout_weight=".5"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:maxWidth="300dp"
        android:padding="12dp"
        android:startYear="2020" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="46dp">

        <EditText
            android:id="@+id/event_time_edit_text"
            android:layout_gravity="start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="time"
            android:maxWidth="488dp"
            android:minHeight="48dp"
            android:autofillHints="7:30"
            android:hint="@string/event_time"
            android:paddingHorizontal="2dp"
            android:gravity="start"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButtonPM"
            android:orientation="horizontal"
            android:id="@+id/radioGroupAMPM">

            <RadioButton
                android:id="@+id/radioButtonAM"
                style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am" />

            <RadioButton
                android:id="@+id/radioButtonPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pm" />
        </RadioGroup>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="12dp"
        android:maxWidth="300dp"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/create_event_button"
        android:id="@+id/create_event_button"
        android:onClick="createEvent"
        >

    </Button>




</LinearLayout>